methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:33: error: ':' expected but '(' found.
def isFacingTrail(col()):Boolean = {
                     ^SlugSnail:58: error: identifier expected but '}' found.
}
^